--- a/EmacsMate.org
+++ b/EmacsMate.org
@@ -180,6 +180,8 @@ This is based on my changing [[http://eschulte.me/emacs24-starter-kit/][Emacs St
   (declare-function ergoemacs-mode "ergoemacs-mode")
   (declare-function org-cua-dwim-activate "org-cua-dwim")
   
+  (declare-function autopair-global-mode "autopair")
+  
   (declare-function ac-config-default "auto-complete-config")
   
   (declare-function pos-tip-w32-max-width-height "pos-tip")
@@ -216,9 +218,9 @@ This is based on my changing [[http://eschulte.me/emacs24-starter-kit/][Emacs St
   (defvar emacsmate-packages
     '(org-outlook
       ace-jump-mode
-      smartparens
       auto-complete
       auto-indent-mode
+      autopair
       keyfreq
       golden-ratio
       ergoemacs-mode
@@ -587,13 +589,14 @@ To use CUA-type keys and others, I use:
   (autoload 'log-edit-mode "log-edit" "" t)
   (defun helm-smex-if-exists (&optional prefix-arg)
     (interactive "p")
-    (if (fboundp 'helm-M-x)
+    (if (and window-system (fboundp 'helm-M-x))
         (helm-M-x )
       (if (fboundp 'smex)
           (smex)
         (execute-extended-command prefix-arg))))
   
-  (global-set-key (kbd "C-x b") 'helm-mini)
+  (when window-system
+    (global-set-key (kbd "C-x b") 'helm-mini))
   
   (when (emacsmate-package-load-path 'helm-projectile)
     (require 'helm-projectile))
@@ -733,6 +736,31 @@ This is the popup menu taken from ErgoEmacs
     
 #+END_SRC
 ** Default Package/Modes Setup
+*** Autopair
+Autopair mode allows parenthesis auto-pairing to occur for all modes
+not just list like paredit.  See [[http://www.emacswiki.org/emacs/AutoPairs#toc3][EmacsWiki: Auto Pairs]].
+#+BEGIN_SRC emacs-lisp
+  (autopair-global-mode 1)
+  (when (boundp 'autopair-skip-whitespace)
+    (setq autopair-skip-whitespace t))
+  
+  (with-no-warnings
+    (defun emacsmate-add-extra-autopairs ()
+        "To add extra autopairs and change autopair behavior"
+        (when (not (featurep 'cl))
+          (require 'cl))
+        (when (boundp 'autopair-extra-pairs)
+          (when (boundp 'autopair-extra-pairs)
+            (push '(?` . ?')
+                  (getf autopair-extra-pairs :comment))
+            (push '(?` . ?')
+                  (getf autopair-extra-pairs :string))
+            (when (boundp 'autopair-skip-whitespace)
+              (set (make-local-variable 'autopair-skip-whitespace) 'chomp))))))
+    
+    (add-hook 'emacs-lisp-mode-hook 'emacsmate-add-extra-autopairs)
+  
+#+END_SRC
 *** Auto-indent-mode
 The autoindent package is something that I find quite useful.  I also
 like to insert some TextMate behaviors to my keys.
@@ -1706,6 +1734,7 @@ Setup global tabbar and ruler.
       (setq tabbar-ruler-global-ruler 't) ; if you want a global ruler
       (setq tabbar-ruler-popup-menu 't) ; If you want a popup menu.
       (setq tabbar-ruler-popup-toolbar 't) ; If you want a popup toolbar
+      (setq tabbar-ruler-popup-scrollbar t) ; Popup scrollbar
       )
     (require 'tabbar-ruler))
   
@@ -1845,24 +1874,5 @@ these to the excluded buffers list.
   (condition-case err
       (golden-ratio-mode 1)
     (error (message "Golden Ratio did not load.")))
-#+END_SRC
-
-** Smart-parens
-#+BEGIN_SRC emacs-lisp
-  (defun emacsmate-lisp-paren ()
-    "Parenthesis operation for emacs lisp"
-    (interactive)
-    (if (looking-at "[ \t\n]*)")
-        (replace-match ")")
-      (insert ")")))
-  
-  (when (emacsmate-package-load-path 'smartparens)
-    (require 'smartparens-config)
-    (smartparens-global-mode)
-    (show-smartparens-global-mode t)
-    (add-to-list 'emacs-lisp-mode-hook
-                 (lambda()
-                   (local-set-key (kbd ")") 'emacsmate-lisp-paren))))
-  
 #+END_SRC
 
