--- a/EmacsMate.org
+++ b/EmacsMate.org
@@ -649,8 +649,8 @@ To use CUA-type keys and others, I use:
       nil
       (ergoemacs-key "M-*" 'mc/mark-next-like-this "Mark Next")
       (ergoemacs-key "M-&" 'mc/edit-lines "Edit Lines")
-      (ergoemacs-key "M-," 'goto-last-change "Goto Last Change")
-      (ergoemacs-key "M-." 'ergoemacs-end-of-line-or-what (format "%s line/*" (make-string 1 8592)))
+      (ergoemacs-key "M-." 'goto-last-change "Goto Last Change")
+      (ergoemacs-key "M-," 'ergoemacs-end-of-line-or-what (format "%s line/*" (make-string 1 8592)))
       (ergoemacs-key "M-m" 'ergoemacs-beginning-of-line-or-what (format "%s line/*" (make-string 1 8594)))
       (ergoemacs-key "M-t" 'execute-extended-command "M-x")
       (ergoemacs-key "M-a" 'ergoemacs-call-keyward-completion "compl")
