--- a/EmacsMate.org
+++ b/EmacsMate.org
@@ -630,21 +630,21 @@ To use CUA-type keys and others, I use:
   
   (setq helm-M-x-requires-pattern nil)
   
-  (emacsmate-package-load-path 'ergoemacs-mode)
-  
-  (when (file-exists-p (expand-file-name "~src/ergoemacs-mode"))
+  (if (not (file-exists-p (expand-file-name "~src/ergoemacs-mode")))
+      (emacsmate-package-load-path 'ergoemacs-mode)
     (setq load-path
           (remove-if
            (lambda(x)
-             (string= (expand-file-name x) (expand-file-name "~src/ergoemacs-mode")))
+             (string-match "ergoemacs-mode" x))
            load-path))
     (setq load-path (append (list (expand-file-name "~src/ergoemacs-mode"))
                             load-path)))
   
+  
   (setq ergoemacs-beginning-or-end-of-line-and-what 'page)
   (require 'ergoemacs-mode nil t)
   
-  (setq ergoemacs-theme "mate")
+  (setq ergoemacs-theme "reduction")
   (ergoemacs-mode 1)
   ;; (cua-mode) 
   ;; (org-cua-dwim-activate)
