--- a/EmacsMate.org
+++ b/EmacsMate.org
@@ -216,6 +216,7 @@ This is based on my changing [[http://eschulte.me/emacs24-starter-kit/][Emacs St
       undo-tree
       ido-ubiquitous
       ido-vertical-mode
+      rainbow-mode
       flx-ido
       melpa
       ;;org-cua-dwim
@@ -1344,15 +1345,19 @@ Also set it up to be used with projectile.
 *** Cosmetics
 
 #+begin_src emacs-lisp
-(eval-after-load 'diff-mode
-  '(progn
-     (set-face-foreground 'diff-added "green4")
-     (set-face-foreground 'diff-removed "red3")))
-
-(eval-after-load 'magit
-  '(progn
-     (set-face-foreground 'magit-diff-add "green3")
-     (set-face-foreground 'magit-diff-del "red3")))
+  (eval-after-load 'diff-mode
+    '(progn
+       (set-face-foreground 'diff-added "green4")
+       (set-face-foreground 'diff-removed "red3")))
+  
+  (eval-after-load 'magit
+    '(progn
+       (set-face-foreground 'magit-diff-add "green3")
+       (set-face-foreground 'magit-diff-del "red3")))
+  
+  (when (fboundp 'rainbow-mode)
+    (define-globalized-minor-mode rainbow-global-mode rainbow-mode rainbow-turn-on)
+    (rainbow-global-mode))
 #+end_src
 
 ** Saving File
