--- a/EmacsMate.org
+++ b/EmacsMate.org
@@ -1356,11 +1356,10 @@ Also set it up to be used with projectile.
        (set-face-foreground 'magit-diff-del "red3")))
   
   (when (fboundp 'rainbow-mode)
-    (define-globalized-minor-mode rainbow-global-mode rainbow-mode
-      '(lambda(x)
-         (unless (memq major-mode '(magit-mode))
-           t)))
-    (rainbow-global-mode))
+    (mapc
+     (lambda(x)
+       (add-hook x 'rainbow-mode))
+     '(emacs-lisp-mode-hook R-mode-hook)))
 #+end_src
 
 ** Saving File
